k8s/dept.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: index
spec:
  selector:
    matchLabels:
      app: index-dept
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: index-dept
    spec:
      containers:
      - name: static
        image: 861531569385.dkr.ecr.ap-south-1.amazonaws.com/first-repo:number 
        ports:
        - containerPort: 80
