k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: index-svc
  namespace: index
spec:
  selector:
    app: index-dept
  ports:
  - port: 80
    targetPort: 80
